--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mysql2": "^3.4.4",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.32.1"
   }
 }
