--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "test",
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "seed": "node ./seeds/index.js"
   },
   "repository": {
     "type": "git",
